check-player-name set false by default

--- a/common/src/main/resources/Config.yml
+++ b/common/src/main/resources/Config.yml
@@ -32,4 +32,4 @@ DonateCase:
   # Set spawn-protection to 0 in server.properties
   DisableSpawnProtection: true
   # If true, checks whether the player with the nickname exists on the server.
-  CheckPlayerName: true
+  CheckPlayerName: false
