refactor configuration keys and update version to 26 | improve config structure and naming consistency

--- a/common/src/main/resources/Config.yml
+++ b/common/src/main/resources/Config.yml
@@ -1,33 +1,32 @@
 config: # Please do not touch this section
-  version: 25
+  version: 26
   type: config
 
-DonateCase:
-  #Do I need to check for plugin updates?
-  UpdateChecker: true
-  #MySQL Settings
-  MySql:
-    Enabled: false
-    Host: 'localhost'
-    Port: 3306
-    DataBase: 'nameDataBase'
-    User: 'root'
-    Password: 'password'
-  # en_US, es_ES, ru_RU, ua_UA
-  Languages: en_US
-  HologramDriver: DecentHolograms # CMI, DecentHolograms, HolographicDisplays or FancyHolograms
-  LevelGroups: # Clear this section if you want to disable
-    legend: 4
-    deluxe: 3
-    vipplus: 2
-    vip: 1
-    default: 0
-  DateFormat: "dd.MM HH:mm:ss"
-  AddonsHelp: true # Show help list for addons commands?
-  UsePackets: false # 1.18+ for using packets, you need to install packetevents plugin
-  # Caching for getting number of keys, case opens and history data
-  # Used only if MySQL enabled
-  # Actually used in placeholders (GUI and PlaceholderAPI)
-  Caching: 20 # in ticks
-  # If true, formats the nickname of the player (searches for a similar one on the server).
-  CheckPlayerName: false
+# Do I need to check for plugin updates?
+update-checker: true
+# MySQL Settings
+mysql:
+  enabled: false
+  host: 'localhost'
+  port: 3306
+  database: 'nameDataBase'
+  username: 'root'
+  password: 'password'
+# en_US, es_ES, ru_RU, ua_UA
+language: en_US
+hologram-driver: DecentHolograms # CMI, DecentHolograms, HolographicDisplays or FancyHolograms
+level-groups: # Clear this section if you want to disable
+  legend: 4
+  deluxe: 3
+  vipplus: 2
+  vip: 1
+  default: 0
+date-format: "dd.MM HH:mm:ss"
+addons-help: true # Show help list for addons commands?
+use-packets: true # you need to install packetevents plugin
+# Caching for getting number of keys, case opens and history data
+# Used only if MySQL enabled
+# Actually used in placeholders (GUI and PlaceholderAPI)
+caching: 20 # in ticks
+# If true, formats the nickname of the player (searches for a similar one on the server).
+format-player-name: false
