--- a/common/src/main/resources/cases/default/settings.yml
+++ b/common/src/main/resources/cases/default/settings.yml
@@ -6,7 +6,7 @@ type: default
 
 default-menu: default_menu
 
-animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL, RANDOM, POP, SELECT see: https://wiki.jodex.xyz/en/docs/2.0.0/DonateCase/animations
+animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL, RANDOM, POP, SELECT see: https://wiki.jodex.xyz/DonateCase/animations
 #  animation-settings:
 #    Type: FULL # or RANDOM
 #    ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
@@ -29,7 +29,7 @@ animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL, RANDOM, POP, SELECT see: https
 #      Volume: 10
 #      Pitch: 1
 
-hologram: # see: https://wiki.jodex.xyz/en/docs/2.0.0/DonateCase/holograms
+hologram: # see: https://wiki.jodex.xyz/DonateCase/holograms
   # Toggle on and off the holograms for the case.
   enabled: true
   # The height of the hologram above the case.
@@ -67,7 +67,7 @@ history-data-size: 10 # 0 if you want to disable history data
 
 cooldown-before-animation: 0 # in tick
 
-level-groups: # delete all of this section, if you want to use default LevelGroups from Config.yml
+level-groups: # delete all of this section, if you want to use default level-groups from Config.yml
   ultra: 6
   legend: 5
   deluxe: 4
