--- a/common/src/main/resources/cases/default/menu/default_menu.yml
+++ b/common/src/main/resources/cases/default/menu/default_menu.yml
@@ -2,6 +2,8 @@ config: # Please do not touch this section
   version: 1
   type: case_menu
 
+# Check our detailed documentation about this file - https://wiki.jodex.xyz/DonateCase/Configs/Cases/menus
+
 id: default_menu
 
 title: '&e&l✨ &6Donate&7-&fCase &e&l✨'
