--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ website: "https://www.jodex.xyz/"
 description: A powerful plugin for creating donation cases on Minecraft servers
 libraries:
   - com.j256.ormlite:ormlite-jdbc:6.1
+  - org.postgresql:postgresql:42.7.8
   - org.spongepowered:configurate-yaml:4.1.2
   - net.kyori:event-method:3.0.0
 softdepend:
