--- a/common/src/main/resources/Animations.yml
+++ b/common/src/main/resources/Animations.yml
@@ -1,5 +1,5 @@
 config: # Please do not touch this section
-  version: 15
+  version: 16
   type: animations
 
 # More information about this configuration - https://wiki.jodex.xyz/DonateCase/Configs/animations
@@ -143,3 +143,30 @@ SELECT:
   Item: CHEST
 #  Period: 0
 #  ItemSlot: HEAD
+
+FUTURE_WHEEL:
+#  Facing: EAST
+  StartPosition:
+    x: 0.5
+    y: -0.5
+    z: 0.5
+  HologramPosition:
+    x: 0.0
+    y: 1.0
+    z: 0.0
+  Spawn:
+    Interval: 20 # in ticks
+    Particle: SMOKE
+    ParticleCount: 3
+    Sound: ENTITY_ARROW_SHOOT
+    Volume: 10
+    Pitch: 1
+  Scroll:
+    Particle: SMOKE
+    ParticleCount: 3
+    Sound: ENTITY_ARROW_SHOOT
+    Volume: 10
+    Pitch: 1
+  CircleRadius: 1.0
+  ScrollingTime: 120 # in ticks, this value will be appended to the total spawn-time (spawn-time = {item count} * SpawnInterval)
+  SkipTicks: 5 # this means that every 5th tick an item in the circle will glow
